INTELLIJ-281 improve performance and simplfy codes